fix win message to center of screen on mobile

--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ h2 {
   }
 
   #nice {
+    position: fixed;
     top: 36%;
   }
 
